--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,13 @@ node_modules/
 cloudinary_python.txt
 node_modules
 assets/css/style_resources.css
+NEW SAFE ALLA SAFE 03-27/article copy.html
+NEW SAFE ALLA SAFE 03-27/contact copy.html
+NEW SAFE ALLA SAFE 03-27/error-page copy.html
+NEW SAFE ALLA SAFE 03-27/index copy.html
+NEW SAFE ALLA SAFE 03-27/resources copy.html
+NEW SAFE ALLA SAFE 03-27/style copy.css
+NEW SAFE ALLA SAFE 03-27/style_article copy.css
+NEW SAFE ALLA SAFE 03-27/style_contact copy.css
+NEW SAFE ALLA SAFE 03-27/style_error copy.css
+NEW SAFE ALLA SAFE 03-27/style_resources copy.css
