--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ NEW SAFE ALLA SAFE 03-27/style_article copy.css
 NEW SAFE ALLA SAFE 03-27/style_contact copy.css
 NEW SAFE ALLA SAFE 03-27/style_error copy.css
 NEW SAFE ALLA SAFE 03-27/style_resources copy.css
+
+.gitignore
